# licfl-flower-tensorflow

./: README.md  pyproject.toml
licfl/: __init__.py  client_app.py  server_app.py  task.py
