[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "licfl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "tensorflow>=2.11.1,<2.18.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "pyarrow>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ngzuwayne"

[tool.flwr.app.components]
serverapp = "licfl.server_app:app"
clientapp = "licfl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 3
batch-size = 32
verbose = true

[tool.flwr.federations]
default = "local-simulation"

[tool.hatch.build.targets.sdist]
include = ["licfl/data/*.feather"]

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
